welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:4: error: '(' expected but identifier found.
     }else{(if n>189){if (n<210){return true}
               ^nearHundred:6: error: illegal start of simple expression
} else {return false}
^nearHundred:6: error: ';' expected but 'else' found.
} else {return false}
  ^